fix: if grid custom button is not set grid has some extra space on top
(cherry picked from commit 4b1f65206f43447e29af5dd7ba1bc811484e40a8)

--- a/frappe/public/scss/common/grid.scss
+++ b/frappe/public/scss/common/grid.scss
@@ -402,6 +402,10 @@
 	display: inline-flex;
 }
 
+.grid-custom-buttons:empty {
+	padding: 0;
+}
+
 .grid-footer, .grid-custom-buttons {
 	padding: var(--padding-sm) 0px;
 	background-color: var(--fg-color);
